2005-12-31  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ReflectionHelper.cs:
		Fix import of type specs.

2005-12-30  Jb Evain  <jbevain@gmail.com>

	* CodeGen/templates/ImageReader.cs
	  Mono.Cecil.Metadata/MetadataReader.cs
	  Mono.Cecil.Binary/Image.cs
	  Mono.Cecil.Binary/ImageReader.cs:
		Add support to assemblies where the metadata is defined
		outside of the text section. (c++/cli /safe for instance)

2005-12-23  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/AssemblyInfo.cs:
		Version 0.2.2.2 devel.

	* Mono.Cecil/AssemblyInfo.cs:
		Version 0.2 to be released.

	* Mono.Cecil/ReflectionWriter.cs:
		IGenericInstance are typespecs as well.

	* Mono.Cecil/ArrayType.cs:
		Add a single dimension in the default ctor.
	* Mono.Cecil/ReflectionReader.cs:
		Don't manually add the default dimension as it's done
		int the array type ctor.
	* Mono.Cecil/ReflectionHelper.cs:
		Import type specs.

2005-12-22  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ReflectionWriter:
		Write pinvoke infos as well.

	* Mono.Cecil/ReflectionReader.cs:
		Unsure that primitive value types are viewed as
		value types.

	* CodeGen/templates/Section.cs
	  CodeGen/templates/ImageReader.cs
	  Mono.Cecil.Metadata/MetadataReader.cs
	  Mono.Cecil.Binary/Image.cs
	  Mono.Cecil.Binary/Section.cs
	  Mono.Cecil.Binary/ImageReader.cs:
		Simplify the way you read binary data whithin
		high level layer.

	* Mono.Cecil.Cil/CodeReader.cs:
		Make helper methods public static.
	* Mono.Cecil/ReflectionReader.cs:
		Don't try to get the entry point method
		if it don't point on a valid method RID.

	* CodeGen/templates/NamedCollectionImplem.cs
	  Mono.Cecil/ExternTypeCollection.cs
	  Mono.Cecil/TypeDefinitionCollection.cs
	  Mono.Cecil/TypeReferenceCollection.cs:
		Don't add existing values.

	* Mono.Cecil/ModuleDefinition.cs:
		Protect import from null refs.

2005-12-21  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/StructureWriter.cs:
		Don't increment pdb age. Not Cecil's job.

	* Mono.Cecil.Cil/ICilWorker.cs